{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 118,
  "lineage": "d454fbf4-867e-d6e7-5a48-4eef371995ca",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/networkInterfaces/ATT-dev-web-linuxvm-nic-1",
            "internal_domain_name_suffix": "pzhfjfunky4ebkazget2gx5tih.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/virtualNetworks/ATT-dev-vnet/subnets/ATT-dev-vnet-websubnet"
              }
            ],
            "location": "eastus",
            "name": "ATT-dev-web-linuxvm-nic-1",
            "private_ip_address": "10.1.1.6",
            "private_ip_addresses": [
              "10.1.1.6"
            ],
            "resource_group_name": "Udacity_rg"
          },
          "dependencies": [
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/networkSecurityGroups/ATT-dev-vnet-websubnet-nsg",
            "location": "eastus",
            "name": "ATT-dev-vnet-websubnet-nsg",
            "resource_group_name": "Udacity_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "80",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/networkSecurityGroups/ATT-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "ATT-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Udacity_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/virtualNetworks/ATT-dev-vnet/subnets/ATT-dev-vnet-websubnet",
            "name": "ATT-dev-vnet-websubnet",
            "resource_group_name": "Udacity_rg",
            "virtual_network_name": "ATT-dev-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/virtualNetworks/ATT-dev-vnet/subnets/ATT-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/networkSecurityGroups/ATT-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/virtualNetworks/ATT-dev-vnet/subnets/ATT-dev-vnet-websubnet"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound_22",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "guid": "96544e7e-568d-403c-a819-3127c35ff347",
            "id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/virtualNetworks/ATT-dev-vnet",
            "location": "eastus",
            "name": "ATT-dev-vnet",
            "resource_group_name": "Udacity_rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/virtualNetworks/ATT-dev-vnet/subnets/ATT-dev-vnet-websubnet",
                "name": "ATT-dev-vnet-websubnet",
                "security_group": "/subscriptions/50d65e48-cd36-43c6-b861-3b1bcc7804e9/resourceGroups/Udacity_rg/providers/Microsoft.Network/networkSecurityGroups/ATT-dev-vnet-websubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "ATT"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}